# http-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  project-info.md  server.c  socketutil.c  socketutil.h
client/: client.c
notes/: NOTES.md
server/: server.c
src/client/: client.c
src/server/: server.c
src/utilities/: errorutil.c  errorutil.h  socketutil.c  socketutil.h
utilities/: socketutil.c  socketutil.h
